[package]
name = "sqlite-chia"
version = "0.1.0"
authors = ["xchdata.io <contact@xchdata.io>"]
edition = "2018"
license = "MIT"

[features]
default = []
build_extension = ["rusqlite/loadable_extension"]

[lib]
crate-type = ["cdylib"]
name = "chia"

[dependencies]
anyhow = "1.0.54"
bech32 = "0.8.1"
# Needed until std::error (PR#123) and serde (PR#) PRs are merged.
chia-protocol = { git = "https://github.com/xchdata/chia_rs", branch = "main", features = ["serde"] }
serde_json = "1.0.91"
zstd = "0.12.2"
sha2 = "0.10.2"

[dependencies.rusqlite]
package = "rusqlite-le"
version = "0.24.2"
features = ["functions", "blob", "bundled", "serde_json"]

[dev-dependencies]
pretty_assertions = "1.1.0"

[profile.release]
lto = true
